from datetime import datetime
from sqlalchemy import create_engine, Column, Integer, String, Float, DateTime, ForeignKey, Text
from sqlalchemy.orm import declarative_base, relationship, sessionmaker

Base = declarative_base()

class User(Base):
    __tablename__ = 'users'

    id = Column(Integer, primary_key=True, autoincrement=True)
    username = Column(String(50), unique=True, nullable=False)
    password_hash = Column(String(256), nullable=False)
    role = Column(String(20), default='user', nullable=False)
    created_at = Column(DateTime, default=datetime.utcnow, nullable=False)

    bookings = relationship('Booking', back_populates='user')

class Room(Base):
    __tablename__ = 'rooms'

    id = Column(Integer, primary_key=True, autoincrement=True)
    name = Column(String(100), nullable=False)
    floor = Column(String(10), nullable=False)
    capacity = Column(Integer, nullable=False)
    status = Column(String(20), default='active', nullable=False)
    pos_x = Column(Float, default=0, nullable=False)
    pos_y = Column(Float, default=0, nullable=False)
    width_pct = Column(Float, default=15, nullable=False)
    height_pct = Column(Float, default=12, nullable=False)
    created_at = Column(DateTime, default=datetime.utcnow, nullable=False)

    bookings = relationship('Booking', back_populates='room')

class Booking(Base):
    __tablename__ = 'bookings'

    id = Column(Integer, primary_key=True, autoincrement=True)
    user_id = Column(Integer, ForeignKey('users.id'), nullable=False)
    room_id = Column(Integer, ForeignKey('rooms.id'), nullable=False)
    start_time = Column(DateTime, nullable=False)
    end_time = Column(DateTime, nullable=False)
    status = Column(String(20), default='pending', nullable=False)
    reason = Column(Text, default='', nullable=True)
    admin_reason = Column(Text, default='', nullable=True)
    created_at = Column(DateTime, default=datetime.utcnow, nullable=False)
    updated_at = Column(DateTime, default=datetime.utcnow, onupdate=datetime.utcnow, nullable=False)
    reviewed_at = Column(DateTime, default=None, nullable=True)
    cancel_reason = Column(Text, default='', nullable=True)
    cancelled_at = Column(DateTime, default=None, nullable=True)

    user = relationship('User', back_populates='bookings')
    room = relationship('Room', back_populates='bookings')


def get_engine(db_path='instance/meeting.db'):
    return create_engine(f'sqlite:///{db_path}', echo=False)


def create_tables(engine):
    Base.metadata.create_all(engine)


def get_session(engine):
    Session = sessionmaker(bind=engine)
    return Session()
